# sphinx-test

./: .gitignore  README.md
.github/workflows/: ci.yml
common_module/: Dockerfile  README.md  aws_util.py  const.py  datamanage_util.py  exception_util.py  extract_util.py  logger_util.py  setup.cfg  slack_utils.py  system_util.py  target_unit_util.py
cpc_prediction/: .gitignore  Dockerfile  docker-compose.yml  main.py  setup.cfg
cvr_prediction/: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py
deploy/: README.md  ci.tpl.yml  render_ci.py
docs/: .buildinfo  CNAME  chap1.html  chap2 copy.html  chap2-1.html  chap2.html  chap3.html  genindex.html  index copy.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  test.html
integration_test/: .env.sample  Dockerfile  README.md  build_targets.py  docker-compose.yml  exec_prepare_and_run_it.sh  prepare_it.sh  requirements.txt  run_it.sh  setup.cfg  tasks.py  test.py  testcase.yml
main/: .env.sample  Dockerfile  README.md  docker-compose.yml  get_units_lambda.py  lambda_handler.py  setup.cfg  test_local.py  test_local_get_units.py
minio/: Dockerfile
pyproject/: README.md  pyproject.toml
record_to_bq/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  lambda_handler.py  setup.cfg  test_local.py
schema/: README.md  init_table.sh  requirements.txt  tasks.py  test_delete_table.sh
sophia-ai/: .gitignore  Dockerfile  README.md  setup.cfg
spa_prediction/: Dockerfile  docker-compose.yml  main.py
sphinx/: Makefile  chap1.rst  chap2.rst  conf.py  index.rst
(+542 files in other folders)
