[tool.poetry]
name = "bid_optimisation_ml"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8,<3.10"
pandas = "^1.3.4"
numpy = "^1.19"

[tool.poetry.group.common_module]
optional = false

[tool.poetry.group.common_module.dependencies]
google-cloud-storage = "^1.35"
google-auth = "^1.33"
google-cloud-bigquery = "^2.23"
google-cloud-bigquery-storage = {version = "^2.9", extras = ["pyarrow","pandas"]}
pyarrow = "^3.0"
s3fs = "^0.4.2"
boto3 = "^1.18.0"
protobuf = "^3.15"
Jinja2 = "^2.11"

[tool.poetry.group.sophia-ai]
optional = true

[tool.poetry.group.sophia-ai.dependencies]
pandas = "^1.3.4"
numpy = "^1.19"
catboost = "^0.26.1"
optuna = "^2.9.1"
pandas-gbq = "^0.17"
scipy = "^1.0"
scikit-learn = "^0.24.2"
joblib = "^1.0.1"
category-encoders = "^2.5.1"
lightgbm = "^3.3.3"
psutil = "^5.9"
markupsafe = "2.0.1"
dask = {version = "^2022", extras = ["complete"]}

[tool.poetry.group.subsystem_common]
optional = false

[tool.poetry.group.subsystem_common.dependencies]
click = "^7.1"
pytz = "^2021"
python-dateutil = "^2.8.1"
cloudpickle = "1.6.0"

[tool.poetry.group.main]
optional = true

[tool.poetry.group.main.dependencies]
marshmallow = "^3.11"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
moto = {extras = ["s3"], version = "^2.2.8"}
pytest = "^6.2"
pytest-mock = "^3.6"
flake8 = "^3.9"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
